Jobs Tracking Application/force-app/main/default/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <length>25</length>
    <type>Text</type>
</CustomField>