Jobs Tracking Application/force-app/main/default/objects/Account/recordTypes/Client.recordType-meta.xml
<RecordType>
    <fullName>Client</fullName>
    <active>true</active>
    <description>Client Companies for permanent and contract job opportunities.</description>
    <label>Client</label>
</RecordType>