Jobs Tracking Application/force-app/main/default/objects/Account/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <description>Consulting customers for freelance projects typically will invoice them.</description>
    <label>Customer</label>
</RecordType>