Jobs Tracking Application/force-app/main/default/objects/Account/recordTypes/Recruiting.recordType-meta.xml
<RecordType>
    <fullName>Recruiting</fullName>
    <active>true</active>
    <description>Recruting Companies</description>
    <label>Recruiting</label>
</RecordType>