Jobs Tracking Application/force-app/main/default/objects/Account/listViews/Accounts_approached_by_Recruiters.listView-meta.xml
<ListView>
    <fullName>Accounts_approached_by_Recruiters</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Recruiting</value>
    </filters>
    <label>Accounts approached by Recruiters</label>
</ListView>