Jobs Tracking Application/force-app/main/default/objects/Account/listViews/Recruiting_Companies.listView-meta.xml
<ListView>
    <fullName>Recruiting_Companies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Recruiting</value>
    </filters>
    <label>Recruiting Companies</label>
</ListView>